added alternative parametrization for getClosestDistance method
Signed-off-by: Christoph Leberecht <leberech@hs-mittweida.de>